2010-04-24  James Youngman  <jay@gnu.org>

	Include what you use; make it possible to use stack<T> by
	including only stack.h.
	* unit-tests/test_stack.cc: Include what you use: include
	"stack.h" but not "cssc.h".

	Include what you use; make it possible to use myset<T> by
	including only myset.h.
	* unit-tests/test_myset.cc: Include myset.h first.
	* myset.h: Include mylist.h since we use mylist<T>.

	Include what you use; make it possible to use mylist<> by
	including only mylist.h.
	* cssc-assert.h: New file; defines the ASSERT macro.
	* quit.h: Delete old definition of ASSERT and declaration of
	assert_failed.
	* mylist.h: Include cssc-assert.h to define ASSERT, and
	<cstdlib> for NULL.
	* unit-tests/test_mylist.cc: Don't include "cssc.h" any more.
	* quit.cc: Include cssc-assert.h for ASSERT and declaration of assert_failed.
	* fatalsig.cc: Include cssc-assert.h since we use ASSERT.
	* file.cc: Likewise.
	* filediff.cc: Likewise.
	* fnsplit.cc: Likewise.
	* linebuf.cc: Likewise.
	* sccsdate.cc: Likewise.
	* sccsname.cc: Likewise.
	* sid.h: Likewise.
	* stack.h: Likewise.

	Move CONFIG_LIST_CHUNK_SIZE from cssc.h to mylist.h.
	* cssc.h (CONFIG_LIST_CHUNK_SIZE): Move into mylist.h.
	* mylist.h (mylist): Relocate CONFIG_LIST_CHUNK_SIZE here from
	cssc.h, but convert it to an enum.

	Add/correct some comments.
	* delta-table.cc: Correct the comment giving the location of
	dtbl-prepend.cc.
	* delta-table.h (class cssc_delta_table): Add a comment explaining
	why cssc_delta_table::delta_at_seq_exists and
	cssc_delta_table::delta_at_seq are not const.

	Add unit tests for delta-table.h.
	* unit-tests/test_delta-table.cc: New file, contains unit tests
	for delta-table.h. 
	* unit-tests/Makefile.am (test_delta_table_SOURCES): New
	variable.
	(check_PROGRAMS): Add test_delta-table.
	* unit-tests/TODO.txt: Remove delta-table.h; there are tests for
	it now.

	Cosmetic fixes for stack.h.
	* stack.h: Remove obsolete version comment.
	(stack::operator=): Correct indentation.